--- a/Mapa_Tessalia.ipynb
+++ b/Mapa_Tessalia.ipynb
@@ -17,7 +17,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "e55abc65-8745-47d5-964c-94d4e8e890f0",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -54,7 +60,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "1f801c72-6511-4a8c-a640-f6d8fab62452",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -89,7 +101,13 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "9d9c8c31-2401-4846-bf97-29bc3a49ddd5",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
